white space fixed on contact form

--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,9 @@ br {
 	border: 4px solid #5CB7A0;
 	
 }
+.footer {
+	margin-top: 18px;
+}
 
 /*Tablet*/
 @media only screen and (max-width: 768px) {
